apps/demo-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-1
  namespace: demo-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-1
  template:
    metadata:
      labels:
        app: demo-1
    spec:
      containers:
      - name: demo-1
        image: registry.k8s.integratn.tech/python-sample-app:latest
        resources:
          limits:
            memory: 256Mi
            cpu: 200m
          requests:
            memory: 128Mi
            cpu: 100m
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: demo-1-pvc
          mountPath: /app/data
      volumes:
      - name: demo-1-pvc
        persistentVolumeClaim:
          claimName: demo-1-pvc
